Update nos comandos